ddr: move ddr phy training to wtmi
The reason for this transition is to "enhance DDR PHY parameters
tuning, which TIM can only do very limited training and consumes
a lot of time", we will move the DDR training, system clock
initialization and AVS setting to wtmi, in TIM, we will only
initialize the DDR related clock and set it to a very LOW
frequency, thus, the DDR chip can be set into self-refresh mode
in wtmi and change to a higher destination frequency. Dues to
this update (change clock settings in wtmi), BootROM is not'
supposed to kickoff the application processor as usual. Instead,
it will be done in WTMI after DDR finished PHY training at the
target frequency.

Change the Makefile to support this feature.
After this patch, we will got the update below:
   Set DDR to LOW frequency in TIM (DDR3-300M, DDR4-400M)
   Move DLL tuning from TIM to WTMI
   Kickoff AP and update AVS settings in wtmi
   Build the wtmi_ddr as a static lib and call from wtmi entry

Change-Id: Ie0b42a206fa0cecbcc7a3d269ea9db19e485d0c0
Signed-off-by: Terry Zhou <bjzhou@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/42575
Tested-by: iSoC Platform CI <ykjenk@marvell.com>
Reviewed-by: Wilson Ding <dingwei@marvell.com>
Reviewed-by: Hua Jing <jinghua@marvell.com>

--- a/wtmi/Makefile
+++ b/wtmi/Makefile
@@ -51,6 +51,22 @@ ASRC = $(wildcard *.S)
 COBJ   = $(CSRC:.c=.o)
 AOBJ   = $(ASRC:.S=.o)
 
+WTMI_DDR_PATH = ../ddr/wtmi_ddr
+WTMI_DDR_LIB  = $(WTMI_DDR_PATH)/wtmi_ddr.a
+
+CLOCKSPRESET		?= CPU_800_DDR_800
+DDR_TOPOLOGY		?= 0
+
+ifeq ($(CLOCKSPRESET), CPU_600_DDR_600)
+		WTMI_CLOCK = 0
+else ifeq ($(CLOCKSPRESET), CPU_800_DDR_800)
+		WTMI_CLOCK = 1
+else ifeq ($(CLOCKSPRESET), CPU_1000_DDR_800)
+		WTMI_CLOCK = 2
+else ifeq ($(CLOCKSPRESET), CPU_1200_DDR_750)
+		WTMI_CLOCK = 3
+endif
+
 COMPILER_FOUND  = $(shell which $(CC))
 TOOLCHAIN_CHECK = \
 	if [ -z "$(COMPILER_FOUND)" ]; then \
@@ -71,9 +87,9 @@ TOOLCHAIN_CHECK = \
 
 .SILENT:
 
-all: tools $(COBJ) $(AOBJ) $(BINPATH)
+all: tools wtmiddr $(COBJ) $(AOBJ) $(BINPATH)
 	$(ECHO) "  LD    $(MAKECMDGOALS)"
-	$(CC) $(LDFLAGS)  $(AOBJ)  $(COBJ) -o $(BINPATH)/wtmi.elf
+	$(CC) $(LDFLAGS)  $(AOBJ)  $(COBJ) $(WTMI_DDR_LIB) -o $(BINPATH)/wtmi.elf
 	$(OBJCOPY) -S -O binary $(BINPATH)/wtmi.elf $(BINPATH)/wtmi.bin
 	@if [ `uname -m` = "x86_64" ]; then $(OBJDUMP) -D -S $(BINPATH)/wtmi.elf > $(BINPATH)/wtmi.dis; fi
 
@@ -92,6 +108,10 @@ clean:
 	$(ECHO) "  CLEAN"
 	@$(RM) -rf $(BINPATH)
 	@$(RM) -f *.o *.elf *.bin *dis
+	@${Q}${MAKE} --no-print-directory -C $(WTMI_DDR_PATH) clean
 
 tools:
 	@$(TOOLCHAIN_CHECK)
+
+wtmiddr:
+	${MAKE} -C $(WTMI_DDR_PATH) DEBUG=$(DEBUG) WTMI_CLOCK=$(WTMI_CLOCK) DDR_TOPOLOGY=$(DDR_TOPOLOGY)
