wtmi: add wtmi code version
This patch gets WTMI version string by combining localversion with
latest git commit number; "WTMI Started!" printing is replaced by WTMI
version printing.

Change-Id: Ic36c0fadb1bfb319305b517cd357b1fd5022dd14
Signed-off-by: Ken Ma <make@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/43770
Tested-by: iSoC Platform CI <ykjenk@marvell.com>
Reviewed-by: Hua Jing <jinghua@marvell.com>
Reviewed-by: Neta Zur Hershkovits <neta@marvell.com>
Reviewed-by: Wilson Ding <dingwei@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/43920
Reviewed-by: Terry Zhou <bjzhou@marvell.com>

--- a/wtmi/Makefile
+++ b/wtmi/Makefile
@@ -39,7 +39,13 @@ BINPATH  = build
 LDSCRIPT = wtmi.ld
 INCLUDE  = -I.
 
-CFLAGS   = -g -gdwarf-2 -Wall -fno-stack-protector $(INCLUDE) -Os $(CPUOPTS)
+BUILD_STRING	:=	$(shell git log -n 1 --pretty=format:"%h")
+LOCAL_VERSION_PATH	:=	..
+LOCAL_VERSION_FILE	:=	$(LOCAL_VERSION_PATH)/localversion
+LOCAL_VERSION_STRING	:=	$(shell cat $(LOCAL_VERSION_FILE))
+VERSION_STRING	:=	$(LOCAL_VERSION_STRING)-$(BUILD_STRING)
+
+CFLAGS   = -g -gdwarf-2 -Wall -fno-stack-protector $(INCLUDE) -Os $(CPUOPTS) -DVERSION=\"$(VERSION_STRING)\"
 CPPFLAGS =
 ASFLAGS  = -g --gdwarf-2 --warn $(INCLUDE) $(CPUOPTS)
 LDFLAGS  = -nostdlib -T $(LDSCRIPT) -Xlinker "--build-id=none"
