wtmi: generate dependency file when compile wtmi
Generate dependency file when compiling wtmi code, thus,
if the settings in headfile were updated, the related
source file will be re-compiled automatically

Change-Id: I075edd5e11e26b515f5a4b64c3c8acb97f848310
Signed-off-by: Terry Zhou <bjzhou@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/47431
Tested-by: iSoC Platform CI <ykjenk@marvell.com>
Reviewed-by: Hua Jing <jinghua@marvell.com>
Reviewed-by: Wilson Ding <dingwei@marvell.com>

--- a/wtmi/sys_init/Makefile
+++ b/wtmi/sys_init/Makefile
@@ -105,11 +105,13 @@ all:  $(COBJ) $(AOBJ) $(BINPATH)
 
 %.o: %.c
 	$(ECHO) "  CC    $<"
-	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o $@ $(subst .o,.c,$@)
+	$(CC) -MMD -MP -c $(CFLAGS) $(CPPFLAGS) -o $@ $(subst .o,.c,$@)
 
 %.o: %.S
 	$(ECHO) "  AS    $<"
 	$(AS) $(ASFLAGS) -o $@ $(subst .o,.S,$@)
+
+-include $(COBJ:.o=.d)
 
 $(BINPATH):
 	@$(MKDIR) $(BINPATH)
