fix: wtmi: fix the DEBUG flag error
Give the DEBUG default value 0 and enable DEBUG information
when set DEBUG flag to non-zero value

Change-Id: If9b65ca5bf948a08bc23ce2d67b2af5cc0972b3d
Tested-by: iSoC Platform CI <ykjenk@marvell.com>
Reviewed-by: Hua Jing <jinghua@marvell.com>
Signed-off-by: Allen Yan <yanwei@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/49768
Tested-by: Hua Jing <jinghua@marvell.com>

--- a/wtmi/Makefile
+++ b/wtmi/Makefile
@@ -62,6 +62,7 @@ WTMI_DDR_LIB  = $(WTMI_DDR_PATH)/wtmi_ddr.a
 
 CLOCKSPRESET		?= CPU_800_DDR_800
 DDR_TOPOLOGY		?= 0
+DEBUG			?= 0
 
 ifeq ($(CLOCKSPRESET), CPU_600_DDR_600)
 		WTMI_CLOCK = 0
