wtmi: Add autoconf.h and filechk rule in Makefile
This patch set the dependencies of wtmi image to
a few build options, which WTMI code is not aware
of the changes with incremental build.

- General build flags, such as clock preset.
- DDR topology file: The DDR topology parameters
is described in a plain text file, which is also
pass to WTMI code as a set of build flags.

All these build options will be dumped to a header
file (autocfg.h), which is generated and tracked
by Makefile. With the new header file, WTMI DDR
code removes the bonding to the DDR topology ID.

The DDR log was slightly improved in this patch
accordingly.

Change-Id: Ib2150b27c272c7ec1645f78a0de0e0972f8105da
Tested-by: iSoC Platform CI <ykjenk@marvell.com>
Reviewed-by: Hua Jing <jinghua@marvell.com>
Signed-off-by: Allen Yan <yanwei@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/49766
Tested-by: Hua Jing <jinghua@marvell.com>

--- a/ddr/wtmi_ddr/Makefile
+++ b/ddr/wtmi_ddr/Makefile
@@ -50,12 +50,54 @@ CSRC = $(wildcard *.c)
 CSRC += $(wildcard ddrcore/*.c)
 COBJ   = $(CSRC:.c=.o)
 
-CFLAGS += -DDEBUG=$(DEBUG) -DWTMI_CLOCK=$(WTMI_CLOCK) -DDDR_TOPOLOGY=$(DDR_TOPOLOGY)
+CFG_HEADER = autoconf.h
+
+define filechk
+	@set -e;				\
+	echo '  CHK     $@';		\
+	mkdir -p $(dir $@);			\
+	$(filechk_$(1)) > $@.tmp;		\
+	if [ -r $@ ] && cmp -s $@ $@.tmp; then	\
+		rm -f $@.tmp;			\
+	else					\
+		echo '  UPD     $@';	\
+		mv -f $@.tmp $@;		\
+	fi
+endef
+
+# FIX-ME:
+# replace the relative path to the DDR topology
+# files and scripts
+DDR_TOPOLOGY_PATH=../../ddr/tim_ddr
+DDR_TOPOLOGY_FILE=$(DDR_TOPOLOGY_PATH)/DDR_TOPOLOGY_$(DDR_TOPOLOGY).txt
+
+SCRIPT_PATH=../../script
+GET_DDR_PARAMS=$(SCRIPT_PATH)/getddrparams.sh
+
+CONFIG_DDR_TYPE  := $(shell $(GET_DDR_PARAMS) $(DDR_TOPOLOGY_FILE) ddr_type)
+CONFIG_BUS_WIDTH := $(shell $(GET_DDR_PARAMS) $(DDR_TOPOLOGY_FILE) ddr_bus_width_index)
+CONFIG_SPEED_BIN := $(shell $(GET_DDR_PARAMS) $(DDR_TOPOLOGY_FILE) ddr_speedbin_index)
+CONFIG_CS_NUM    := $(shell $(GET_DDR_PARAMS) $(DDR_TOPOLOGY_FILE) ddr_cs_mask)
+CONFIG_DEV_CAP   := $(shell $(GET_DDR_PARAMS) $(DDR_TOPOLOGY_FILE) ddr_mem_size_index)
+
+define filechk_autoconf.h
+	(echo \#define DEBUG $(DEBUG);\
+	echo \#define WTMI_CLOCK $(WTMI_CLOCK);\
+	echo \#define CONFIG_DDR_TYPE $(CONFIG_DDR_TYPE);\
+	echo \#define CONFIG_BUS_WIDTH $(CONFIG_BUS_WIDTH);\
+	echo \#define CONFIG_SPEED_BIN $(CONFIG_SPEED_BIN);\
+	echo \#define CONFIG_CS_NUM $(CONFIG_CS_NUM);\
+	echo \#define CONFIG_DEV_CAP $(CONFIG_DEV_CAP);)
+endef
 
 .SILENT:
+.PHONY: $(CFG_HEADER)
 
-all: $(COBJ)
+all: $(CFG_HEADER) $(COBJ)
 	$(AR) -r wtmi_ddr.a $(COBJ)
+
+$(CFG_HEADER):
+	$(call filechk,autoconf.h)
 
 %.o: %.c
 	$(ECHO) "  CC    $<"
@@ -65,4 +107,5 @@ all: $(COBJ)
 
 clean:
 	$(ECHO) "  DDRGEN CLEAN"
-	@$(RM) -f *.o *.a ddrcore/*.o
+	@$(RM) -f autoconf.h *.o *.a ddrcore/*.o
+
