wtmi: Add dependency from autoconf.h for all targets
In some cases with many parallel make builds the compilation
of C files startes ahead of production of autoconf.h
This patch adds dependency from autoconf.h presence to all *.c
and *.S targets.

Change-Id: Ia113dc64203fec0e063afc0d3875cca270ac750a
Signed-off-by: Konstantin Porotchkin <kostap@marvell.com>
Reviewed-on: https://sj1git1.cavium.com/5184
Tested-by: sa_ip-sw-jenkins
Reviewed-by: Lior Levin <Lior.Levin@cavium.com>
Reviewed-by: Kostya Porotchkin <Kostya.Porotchkin@cavium.com>

--- a/wtmi/sys_init/Makefile
+++ b/wtmi/sys_init/Makefile
@@ -145,11 +145,11 @@ all: $(CFG_HEADER) $(COBJ) $(AOBJ) $(BINPATH)
 $(CFG_HEADER):
 	$(call filechk,autoconf.h)
 
-%.o: %.c
+%.o: %.c $(CFG_HEADER)
 	$(ECHO) "  CC    $<"
 	$(CC) -MMD -MP -c $(CFLAGS) $(CPPFLAGS) -o $@ $(subst .o,.c,$@)
 
-%.o: %.S
+%.o: %.S $(CFG_HEADER)
 	$(ECHO) "  AS    $<"
 	$(AS) $(ASFLAGS) -o $@ $(subst .o,.S,$@)
 
@@ -161,4 +161,4 @@ $(BINPATH):
 clean:
 	$(ECHO) "  SYS INIT CLEAN"
 	@$(RM) -rf $(BINPATH)
-	@$(RM) -f autoconf.h *.o *.elf *.bin *.d *dis ddr/*.o ddr/*.d $(COMMON_PATH)/*.o $(LDSCRIPT)
+	@$(RM) -f $(CFG_HEADER) *.o *.elf *.bin *.d *dis ddr/*.o ddr/*.d $(COMMON_PATH)/*.o $(LDSCRIPT)
