wtmi: Do not rebuild objects files when autoconf.h was not changed
.PHONY targets should not depend on file targets. It is written in GNU Make
documentation and also it is because all dependences of .PHONY targets are
always rebuilt

Because autoconf.h target defined by $(CFG_HEADER) is set as .PHONY it
means that all objects files are always rebuilt even when autoconf.h was
not changed.

Fix this issue by removing $(CFG_HEADER) from .PHONY, introducing a new
.PHONY target FORCE and make $(CFG_HEADER) depends on FORCE. This is
classic way how to ensure that $(CFG_HEADER) is always called but targets
which depends on $(CFG_HEADER) are rebuilt only when output from
$(CFG_HEADER) (file autoconf.h) is changed.

Signed-off-by: Pali Rohár <pali@kernel.org>

--- a/wtmi/sys_init/Makefile
+++ b/wtmi/sys_init/Makefile
@@ -132,7 +132,6 @@ define filechk_autoconf.h
 endef
 
 .SILENT:
-.PHONY: $(CFG_HEADER)
 
 all: $(CFG_HEADER) $(COBJ) $(AOBJ) $(BINPATH)
 	rm -f ./$(LDSCRIPT)
@@ -142,7 +141,7 @@ all: $(CFG_HEADER) $(COBJ) $(AOBJ) $(BINPATH)
 	$(OBJCOPY) -S -O binary $(BINPATH)/sys_init.elf $(BINPATH)/sys_init.bin
 	@if [ `uname -m` = "x86_64" ]; then $(OBJDUMP) -D -S $(BINPATH)/sys_init.elf > $(BINPATH)/sys_init.dis; fi
 
-$(CFG_HEADER):
+$(CFG_HEADER): FORCE
 	$(call filechk,autoconf.h)
 
 %.o: %.c $(CFG_HEADER)
@@ -162,3 +161,5 @@ clean:
 	$(ECHO) "  SYS INIT CLEAN"
 	@$(RM) -rf $(BINPATH)
 	@$(RM) -f $(CFG_HEADER) *.o *.elf *.bin *.d *dis ddr/*.o ddr/*.d $(COMMON_PATH)/*.o $(LDSCRIPT)
+
+FORCE:;
