Specify .PHONY targets
Signed-off-by: Pali Rohár <pali@kernel.org>

--- a/wtmi/sys_init/Makefile
+++ b/wtmi/sys_init/Makefile
@@ -168,3 +168,4 @@ clean:
 	@$(RM) -f $(CFG_HEADER) *.o *.elf *.bin *.d *dis ddr/*.o ddr/*.d $(COMMON_PATH)/*.o $(LDSCRIPT)
 
 FORCE:;
+.PHONY: all clean FORCE
